Add additional properties needed for JHipster with Quarkus and Micronaut